Fixing offset of modal and game, for various sized screens. Fixed mouse offset on small screens.

--- a/res/sass/main.scss
+++ b/res/sass/main.scss
@@ -55,7 +55,7 @@ a:visited {
   position: relative;
   background-color: #000000;
   display: block;
-  margin: 4rem auto;
+  margin: 0 auto;
   cursor: none !important;
 }
 
@@ -63,7 +63,7 @@ a:visited {
   text-align: center;
   font-size: 4rem;
   padding: 0;
-  margin-top: 0;
+  margin: 0;
   border-bottom: 0.2rem solid $ui-highlight;
   background-color: $background-color-light;
   height: 100px;
@@ -130,8 +130,9 @@ a:hover {
   border-radius: 15px;
   width: 800px;
   height: 600px;
-  position: relative;
-  margin: addRem(calculateRem(-605), -4) auto 0 auto;
+  position: absolute;
+  top: 100px;
+  left: 355px;
 }
 
 .menu {
